Fix preview image spacing

--- a/bookmarks/styles/bookmark-details.css
+++ b/bookmarks/styles/bookmark-details.css
@@ -28,7 +28,7 @@
   }
 
   & .preview-image {
-    margin: var(--unit-4 0);
+    margin: var(--unit-4) 0;
 
     img {
       max-width: 100%;
